# teinei-text-counter

./: Dockerfile  LICENSE  README.md  docker-compose.yml
src/teinei-text-counter/: .gitignore  Cargo.toml  LICENSE_MIT  README.md
src/teinei-text-counter/pkg/: README.md  teinei_text_counter.d.ts
src/teinei-text-counter/src/: lib.rs
src/teinei-text-counter/tests/: lib.rs
teinei-text-counter/: Cargo.toml
teinei-text-counter-demo/: next.config.js  package-lock.json  package.json
teinei-text-counter-demo/pages/: index.tsx
teinei-text-counter/.cargo/: config.template
teinei-text-counter/src/: lib.rs
