[package]
name = "teinei-text-counter"
version = "0.1.0"
authors = ["roiban1344 <81000453+roiban1344@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.57"
unicode-segmentation = "1.9.0"
wasm-bindgen = "0.2.63"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
rstest = "0.12.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
